--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
             <div class="story">
                 <div class="story-top" > GoGo 
                     <h4 class="background-blue">стори</h4>
+                    <div>123</div>
                 </div>
             </div>
           </div>
