--- a/index.html
+++ b/index.html
@@ -215,13 +215,22 @@
       <section class="page2">
           <div class="gogo-story">
             <div class="story">
-                <div class="story-top" > GoGo 
+                <div class="story-top flex" > GoGo 
                     <h4 class="background-blue">стори</h4>
-                    <div>123</div>
                 </div>
+            </div>
+            <div class="story1">
+              <img class="story-img" src="https://mgl.gogo.mn/newsn/story/munkhsaruul2023-65117556be8b2558587476.png" alt="">
+              <img class="story-logo" src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg" alt="">
+              <div class="story-title">
+                25 хүнийг хилээр гарган, хүн худалдаалах хэргийн хохирогч болгох гэж байхад нь таньж тогтоосон.   
+              </div>
+              <div class="story-see">
+                <img src="./zurag/story icon /see.png" alt="">
+              </div>
             </div>
           </div>
       </section>
     </div>
   </body>
-</html>
+</html> 
