--- a/index.html
+++ b/index.html
@@ -214,30 +214,108 @@
       </section>
       <section class="page2">
         <div class="gogo-story">
-          <div class="story">
-            <div class="story-top flex">
+          <div class="story-top">
+            <div class="story-top-header flex">
               GoGo
               <h4 class="background-blue">стори</h4>
             </div>
           </div>
-          <div class="story1">
-            <img
-              class="story-img"
-              src="https://mgl.gogo.mn/newsn/story/munkhsaruul2023-65117556be8b2558587476.png"
-              alt=""
-            />
-            <img
-              class="story-logo"
-              src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg"
-              alt=""
-            />
-            <div class="story-title">
-              <div>
-                25 хүнийг хилээр гарган, хүн худалдаалах хэргийн хохирогч болгох
-                гэж байхад нь таньж тогтоосон.
+          <div class="story flex">
+            <div class="story-in">
+              <img
+                class="story-img"
+                src="https://mgl.gogo.mn/newsn/story/munkhsaruul2023-65117556be8b2558587476.png"
+                alt=""
+              />
+              <img
+                class="story-logo"
+                src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg"
+                alt=""
+              />
+              <div class="story-title">
+                <div>
+                  25 хүнийг хилээр гарган, хүн худалдаалах хэргийн хохирогч болгох
+                  гэж байхад нь таньж тогтоосон.
+                </div>
+                <div class="story-see">
+                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+                </div>
               </div>
-              <div class="story-see">
-                <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+            </div>
+            <div class="story-in">
+              <img
+                class="story-img"
+                src="https://mgl.gogo.mn/newsn/story/meddeg-medeeldeg-baiy-avtomashingui-6-165706-1713335784-651152bb77b28731361084.jpeg"alt=""/>
+
+              <img
+                class="story-logo"
+                src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg"
+                alt=""
+              />
+              <div class="story-title">
+                <div>
+                  ФОТО: Автомашингүй өдөр  
+                </div>
+                <div class="story-see">
+                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="story-in">
+              <img
+                class="story-img"
+                src="https://mgl.gogo.mn/newsn/story/311083-25092023-1695604621-343275141-djgk-6511318b8df5a834905703.jpg"alt=""/>
+              <img
+                class="story-logo"
+                src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg"
+                alt=""
+              />
+              <div class="story-title">
+                <div>
+                  Оросын дунд сургуулиудад цэргийн хичээл зааж байна.
+                </div>
+                <div class="story-see">
+                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="story-in">
+              <img
+                class="story-img"
+                src="https://mgl.gogo.mn/newsn/story/311079-25092023-1695601312-629662252-final66mgl-tjk1-1687524971-1687524971-6510dbd61f354647541773.jpg"alt=""/>
+              <img
+                class="story-logo"
+                src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg"
+                alt=""
+              />
+              <div class="story-title">
+                <div>
+                  Жүдо, буудлагын тамирчид Азийн наадмын медалийн салхийг хагаллаа.
+                </div>
+                <div class="story-see">
+                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="story-in">
+              <img
+                class="story-img"
+                src="https://mgl.gogo.mn/newsn/story/munkhsaruul2023-65117556be8b2558587476.png"
+                alt=""
+              />
+              <img
+                class="story-logo"
+                src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg"
+                alt=""
+              />
+              <div class="story-title">
+                <div>
+                  25 хүнийг хилээр гарган, хүн худалдаалах хэргийн хохирогч болгох
+                  гэж байхад нь таньж тогтоосон.
+                </div>
+                <div class="story-see">
+                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+                </div>
               </div>
             </div>
           </div>
