--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           </div>
         </main>
       </section>
-      <section class="page2">
+      <section class="page2 flex">
         <div class="gogo-story">
           <div class="story-top">
             <div class="story-top-header flex">
@@ -234,18 +234,24 @@
               />
               <div class="story-title">
                 <div>
-                  25 хүнийг хилээр гарган, хүн худалдаалах хэргийн хохирогч болгох
-                  гэж байхад нь таньж тогтоосон.
+                  25 хүнийг хилээр гарган, хүн худалдаалах хэргийн хохирогч
+                  болгох гэж байхад нь таньж тогтоосон.
                 </div>
                 <div class="story-see">
-                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+                  <img
+                    class="story-icon"
+                    src="./zurag/story icon /see.png"
+                    alt=""
+                  />
                 </div>
               </div>
             </div>
             <div class="story-in">
               <img
                 class="story-img"
-                src="https://mgl.gogo.mn/newsn/story/meddeg-medeeldeg-baiy-avtomashingui-6-165706-1713335784-651152bb77b28731361084.jpeg"alt=""/>
+                src="https://mgl.gogo.mn/newsn/story/meddeg-medeeldeg-baiy-avtomashingui-6-165706-1713335784-651152bb77b28731361084.jpeg"
+                alt=""
+              />
 
               <img
                 class="story-logo"
@@ -253,18 +259,44 @@
                 alt=""
               />
               <div class="story-title">
-                <div>
-                  ФОТО: Автомашингүй өдөр  
-                </div>
+                <div>ФОТО: Автомашингүй өдөр</div>
                 <div class="story-see">
-                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+                  <img
+                    class="story-icon"
+                    src="./zurag/story icon /see.png"
+                    alt=""
+                  />
                 </div>
               </div>
             </div>
             <div class="story-in">
               <img
                 class="story-img"
-                src="https://mgl.gogo.mn/newsn/story/311083-25092023-1695604621-343275141-djgk-6511318b8df5a834905703.jpg"alt=""/>
+                src="https://mgl.gogo.mn/newsn/story/311083-25092023-1695604621-343275141-djgk-6511318b8df5a834905703.jpg"
+                alt=""
+              />
+              <img
+                class="story-logo"
+                src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg"
+                alt=""
+              />
+              <div class="story-title">
+                <div>Оросын дунд сургуулиудад цэргийн хичээл зааж байна.</div>
+                <div class="story-see">
+                  <img
+                    class="story-icon"
+                    src="./zurag/story icon /see.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="story-in">
+              <img
+                class="story-img"
+                src="https://mgl.gogo.mn/newsn/story/311079-25092023-1695601312-629662252-final66mgl-tjk1-1687524971-1687524971-6510dbd61f354647541773.jpg"
+                alt=""
+              />
               <img
                 class="story-logo"
                 src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg"
@@ -272,28 +304,15 @@
               />
               <div class="story-title">
                 <div>
-                  Оросын дунд сургуулиудад цэргийн хичээл зааж байна.
+                  Жүдо, буудлагын тамирчид Азийн наадмын медалийн салхийг
+                  хагаллаа.
                 </div>
                 <div class="story-see">
-                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="story-in">
-              <img
-                class="story-img"
-                src="https://mgl.gogo.mn/newsn/story/311079-25092023-1695601312-629662252-final66mgl-tjk1-1687524971-1687524971-6510dbd61f354647541773.jpg"alt=""/>
-              <img
-                class="story-logo"
-                src="https://mgl.gogo.mn//newsn/v4/images/author.df8ba556.svg"
-                alt=""
-              />
-              <div class="story-title">
-                <div>
-                  Жүдо, буудлагын тамирчид Азийн наадмын медалийн салхийг хагаллаа.
-                </div>
-                <div class="story-see">
-                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+                  <img
+                    class="story-icon"
+                    src="./zurag/story icon /see.png"
+                    alt=""
+                  />
                 </div>
               </div>
             </div>
@@ -310,18 +329,120 @@
               />
               <div class="story-title">
                 <div>
-                  25 хүнийг хилээр гарган, хүн худалдаалах хэргийн хохирогч болгох
-                  гэж байхад нь таньж тогтоосон.
+                  25 хүнийг хилээр гарган, хүн худалдаалах хэргийн хохирогч
+                  болгох гэж байхад нь таньж тогтоосон.
                 </div>
                 <div class="story-see">
-                  <img class="story-icon" src="./zurag/story icon /see.png" alt="" />
+                  <img
+                    class="story-icon"
+                    src="./zurag/story icon /see.png"
+                    alt=""
+                  />
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="medee flex">
+          <div class="medee-left">
+            <div class="calendar">
+              <div class="calendar-list flex">
+                <div class="calendar-list-item">
+                  <div class="onoodor">
+                    Өнөөдөр
+                    <img
+                      src="https://mgl.gogo.mn//newsn/v4/images/todaynews.6ba1d8b2.png"
+                      alt=""
+                    />
+                  </div>
+                  <div class="calendar-line"></div>
+                  <div class="calendar-day">9 сарын 26</div>
+                </div>
+                <div class="calendar-list-item margin-top width ">
+                  <div class="calendar-line"></div>
+                  <div class="calendar-day">9 сарын 25</div>
+                </div>
+                <div class="calendar-list-item margin-top  width">  
+                  <div class="calendar-line"></div>
+                  <div class="calendar-day">9 сарын 24</div>
+                </div>
+                <div class="calendar-list-item margin-top width ">
+                  <div class="calendar-line"></div>
+                  <div class="calendar-day">9 сарын 23</div>
+                </div>
+                <div class="calendar-list-item margin-top width">
+                  <div class="calendar-line"></div>
+                  <div class="calendar-day">9 сарын 22</div>
+                </div>
+                <div class="calendar-list-item margin-top width ">
+                  <div class="calendar-line"></div>
+                  <div class="calendar-day">9 сарын 21</div>
+                </div>
+              </div>
+            </div>
+            <div class="medee-list flex">
+              <div class="medee-in flex margin-right100">
+                <img class="medee-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311173-27092023-1695773206-1976511927-WhatsApp-Details-Disappearing-Messages-Ahead-of-Official-Rollout.jpg" alt="">
+                <div class="medee">
+                  <h3 class="medee-header flex margin-0">Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp ашиглах боломжгүй болно
+                  </h3>
+                  <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
+                  </p>
+                  <div class="medee-undersec">
+                     <img src="./zurag/medee icon/share (1).png" alt=" ">
+                     <div>0</div>
+                  </div>
+                </div>
+              </div>
+              <div class="medee-in flex margin-right100">
+                <img class="medee-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311173-27092023-1695773206-1976511927-WhatsApp-Details-Disappearing-Messages-Ahead-of-Official-Rollout.jpg" alt="">
+                <div class="medee">
+                  <h3 class="medee-header flex margin-0">Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp ашиглах боломжгүй болно
+                  </h3>
+                  <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
+                  </p>
+                  <div class="medee-undersec flex ">
+                     <img  src="./zurag/medee icon/share (1).png" alt=" ">
+                     <div>0</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="medee-right">
+            <div>
+              <img class="ontsloh-icon" src="https://mgl.gogo.mn//newsn/v4/images/highlightnews.4812c9a7.png" alt="">
+              <div class="ontsloh-medee">Онцлох мэдээ</div>
+            </div>
+             <div class="ontsloh-medee">
+                <div class="ontsloh-list">
+                  <img class="ontsloh-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-27092023-1695772888-1151938173--25092023-1695599905-722968298--15122022-1671094666-842667206-tsas_gudamj_hawriintsas_ulaanbaatarhot_hot_hotiingudamj-26-161945-15321831351.jpeg" alt="">
+                  <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
+                  <div class="medee-undersec flex">
+                    <img src="./zurag/medee icon/share (1).png" alt=" ">
+                    <p>0</p>
+                 </div>
+                </div>
+                <div class="ontsloh-list">
+                  <img class="ontsloh-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-27092023-1695772888-1151938173--25092023-1695599905-722968298--15122022-1671094666-842667206-tsas_gudamj_hawriintsas_ulaanbaatarhot_hot_hotiingudamj-26-161945-15321831351.jpeg" alt="">
+                  <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
+                  <div class="medee-undersec flex">
+                    <img src="./zurag/medee icon/share (1).png" alt=" ">
+                    <p>0</p>
+                 </div>
+                </div>
+                <div class="ontsloh-list">
+                  <img class="ontsloh-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-27092023-1695772888-1151938173--25092023-1695599905-722968298--15122022-1671094666-842667206-tsas_gudamj_hawriintsas_ulaanbaatarhot_hot_hotiingudamj-26-161945-15321831351.jpeg" alt="">
+                  <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
+                  <div class="medee-undersec flex">
+                    <img src="./zurag/medee icon/share (1).png" alt=" ">
+                    <p>0</p>
+                 </div>
+                </div>
+             </div>
           </div>
         </div>
       </section>
     </div>
   </body>
 </html>
-  
