--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           </div>
         </div>
         <div class="medee flex">
-          <div class="medee-left">
+          <div class="medee-left flex">
             <div class="calendar">
               <div class="calendar-list flex">
                 <div class="calendar-list-item">
@@ -388,7 +388,7 @@
                   </h3>
                   <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
                   </p>
-                  <div class="medee-undersec">
+                  <div class="medee-undersec flex">
                      <img src="./zurag/medee icon/share (1).png" alt=" ">
                      <div>0</div>
                   </div>
@@ -407,10 +407,102 @@
                   </div>
                 </div>
               </div>
+              <div class="medee-in flex margin-right100">
+                <img class="medee-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311173-27092023-1695773206-1976511927-WhatsApp-Details-Disappearing-Messages-Ahead-of-Official-Rollout.jpg" alt="">
+                <div class="medee">
+                  <h3 class="medee-header flex margin-0">Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp ашиглах боломжгүй болно
+                  </h3>
+                  <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
+                  </p>
+                  <div class="medee-undersec flex">
+                     <img src="./zurag/medee icon/share (1).png" alt=" ">
+                     <div>0</div>
+                  </div>
+                </div>
+              </div>
+              <div class="medee-in flex margin-right100">
+                <img class="medee-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311173-27092023-1695773206-1976511927-WhatsApp-Details-Disappearing-Messages-Ahead-of-Official-Rollout.jpg" alt="">
+                <div class="medee">
+                  <h3 class="medee-header flex margin-0">Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp ашиглах боломжгүй болно
+                  </h3>
+                  <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
+                  </p>
+                  <div class="medee-undersec flex">
+                     <img src="./zurag/medee icon/share (1).png" alt=" ">
+                     <div>0</div>
+                  </div>
+                </div>
+              </div>
+              <div class="medee-in flex margin-right100">
+                <img class="medee-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311173-27092023-1695773206-1976511927-WhatsApp-Details-Disappearing-Messages-Ahead-of-Official-Rollout.jpg" alt="">
+                <div class="medee">
+                  <h3 class="medee-header flex margin-0">Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp ашиглах боломжгүй болно
+                  </h3>
+                  <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
+                  </p>
+                  <div class="medee-undersec flex">
+                     <img src="./zurag/medee icon/share (1).png" alt=" ">
+                     <div>0</div>
+                  </div>
+                </div>
+              </div>
+              <div class="medee-in flex margin-right100">
+                <img class="medee-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311173-27092023-1695773206-1976511927-WhatsApp-Details-Disappearing-Messages-Ahead-of-Official-Rollout.jpg" alt="">
+                <div class="medee">
+                  <h3 class="medee-header flex margin-0">Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp ашиглах боломжгүй болно
+                  </h3>
+                  <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
+                  </p>
+                  <div class="medee-undersec flex">
+                     <img src="./zurag/medee icon/share (1).png" alt=" ">
+                     <div>0</div>
+                  </div>
+                </div>
+              </div>
+              <div class="medee-in flex margin-right100">
+                <img class="medee-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311173-27092023-1695773206-1976511927-WhatsApp-Details-Disappearing-Messages-Ahead-of-Official-Rollout.jpg" alt="">
+                <div class="medee">
+                  <h3 class="medee-header flex margin-0">Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp ашиглах боломжгүй болно
+                  </h3>
+                  <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
+                  </p>
+                  <div class="medee-undersec flex">
+                     <img src="./zurag/medee icon/share (1).png" alt=" ">
+                     <div>0</div>
+                  </div>
+                </div>
+              </div>
+              <div class="medee-in flex margin-right100">
+                <img class="medee-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311173-27092023-1695773206-1976511927-WhatsApp-Details-Disappearing-Messages-Ahead-of-Official-Rollout.jpg" alt="">
+                <div class="medee">
+                  <h3 class="medee-header flex margin-0">Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp ашиглах боломжгүй болно
+                  </h3>
+                  <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
+                  </p>
+                  <div class="medee-undersec flex">
+                     <img src="./zurag/medee icon/share (1).png" alt=" ">
+                     <div>0</div>
+                  </div>
+                </div>
+              </div>
+              <div class="medee-in flex margin-right100">
+                <img class="medee-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311173-27092023-1695773206-1976511927-WhatsApp-Details-Disappearing-Messages-Ahead-of-Official-Rollout.jpg" alt="">
+                <div class="medee">
+                  <h3 class="medee-header flex margin-0">Хуучин үйлдлийн системтэй Android хэрэглэгчид WhatsApp ашиглах боломжгүй болно
+                  </h3>
+                  <p class="medee-text">Мета компанийн эзэмшдэг WhatsApp мессенжер ирэх аравдугаар сараас эхлэн хуучирсан үйлдлийн системтэй Android ухаалаг гар утаснууд дээр ажиллахаа болино. Энэ талаар WhatsApp-ийн тусламжийн төвийн вэб с
+                  </p>
+                  <div class="medee-undersec flex">
+                     <img src="./zurag/medee icon/share (1).png" alt=" ">
+                     <div>0</div>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
           <div class="medee-right">
-            <div>
+            <div class="ontsloh-top flex">
               <img class="ontsloh-icon" src="https://mgl.gogo.mn//newsn/v4/images/highlightnews.4812c9a7.png" alt="">
               <div class="ontsloh-medee">Онцлох мэдээ</div>
             </div>
@@ -420,7 +512,7 @@
                   <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
                   <div class="medee-undersec flex">
                     <img src="./zurag/medee icon/share (1).png" alt=" ">
-                    <p>0</p>
+                    <p style="margin: 0px;">0</p>
                  </div>
                 </div>
                 <div class="ontsloh-list">
@@ -428,7 +520,7 @@
                   <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
                   <div class="medee-undersec flex">
                     <img src="./zurag/medee icon/share (1).png" alt=" ">
-                    <p>0</p>
+                    <p style="margin: 0px;">0</p>
                  </div>
                 </div>
                 <div class="ontsloh-list">
@@ -436,7 +528,39 @@
                   <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
                   <div class="medee-undersec flex">
                     <img src="./zurag/medee icon/share (1).png" alt=" ">
-                    <p>0</p>
+                    <p style="margin: 0px;">0</p>
+                 </div>
+                </div>
+                <div class="ontsloh-list">
+                  <img class="ontsloh-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-27092023-1695772888-1151938173--25092023-1695599905-722968298--15122022-1671094666-842667206-tsas_gudamj_hawriintsas_ulaanbaatarhot_hot_hotiingudamj-26-161945-15321831351.jpeg" alt="">
+                  <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
+                  <div class="medee-undersec flex">
+                    <img src="./zurag/medee icon/share (1).png" alt=" ">
+                    <p style="margin: 0px;">0</p>
+                 </div>
+                </div>
+                <div class="ontsloh-list">
+                  <img class="ontsloh-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-27092023-1695772888-1151938173--25092023-1695599905-722968298--15122022-1671094666-842667206-tsas_gudamj_hawriintsas_ulaanbaatarhot_hot_hotiingudamj-26-161945-15321831351.jpeg" alt="">
+                  <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
+                  <div class="medee-undersec flex">
+                    <img src="./zurag/medee icon/share (1).png" alt=" ">
+                    <p style="margin: 0px;">0</p>
+                 </div>
+                </div>
+                <div class="ontsloh-list">
+                  <img class="ontsloh-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-27092023-1695772888-1151938173--25092023-1695599905-722968298--15122022-1671094666-842667206-tsas_gudamj_hawriintsas_ulaanbaatarhot_hot_hotiingudamj-26-161945-15321831351.jpeg" alt="">
+                  <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
+                  <div class="medee-undersec flex">
+                    <img src="./zurag/medee icon/share (1).png" alt=" ">
+                    <p style="margin: 0px;">0</p>
+                 </div>
+                </div>
+                <div class="ontsloh-list">
+                  <img class="ontsloh-img border-radius10px" src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-27092023-1695772888-1151938173--25092023-1695599905-722968298--15122022-1671094666-842667206-tsas_gudamj_hawriintsas_ulaanbaatarhot_hot_hotiingudamj-26-161945-15321831351.jpeg" alt="">
+                  <div class="list-text">Өнөөдөр зарим нутгаар бороо, нойтон цас орно</div>
+                  <div class="medee-undersec flex">
+                    <img src="./zurag/medee icon/share (1).png" alt=" ">
+                    <p style="margin: 0px;">0</p>
                  </div>
                 </div>
              </div>
