--- a/index.html
+++ b/index.html
@@ -587,7 +587,11 @@
                     <div>0</div>
                   </div>
                 </div>
+                
               </div>
+              <button class="flex">Цааш үргэлжлүүлэх
+                <img src="https://mgl.gogo.mn//newsn/v4/images/more.50d348c2.png" alt="">
+              </button>
             </div>
           </div>
           <div class="medee-right">
@@ -736,7 +740,6 @@
                 ГУТАЛ #24:Тэнд автобус очихгүй, таксидвал төлбөр нь “тэнгэрт
                 хадна”, тэглээ ч хичээлээ таслахгүй
               </h3>
-              <div>Дэлгэрэнгүй</div>
             </div>
           </div>
           <div class="yariltslaga3 relative">
@@ -751,7 +754,6 @@
                 ГУТАЛ #24:Тэнд автобус очихгүй, таксидвал төлбөр нь “тэнгэрт
                 хадна”, тэглээ ч хичээлээ таслахгүй
               </h3>
-              <div>Дэлгэрэнгүй</div>
             </div>
           </div>
           <div class="yariltslaga4 relative">
@@ -766,7 +768,6 @@
                 ГУТАЛ #24:Тэнд автобус очихгүй, таксидвал төлбөр нь “тэнгэрт
                 хадна”, тэглээ ч хичээлээ таслахгүй
               </h3>
-              <div>Дэлгэрэнгүй</div>
             </div>
           </div>
           <div class="yariltslaga5 relative border-radius10px">
@@ -781,7 +782,6 @@
                 ГУТАЛ #24:Тэнд автобус очихгүй, таксидвал төлбөр нь “тэнгэрт
                 хадна”, тэглээ ч хичээлээ таслахгүй
               </h3>
-              <div>Дэлгэрэнгүй</div>
             </div>
           </div>
         </div>
@@ -790,7 +790,7 @@
             GoGo
             <div>Хэв маяг</div>
           </div>
-          <div class="hevnyg-cards flex">
+          <div class="hevmayg-cards flex">
             <div class="hevmayg-card border-radius10px">
               <img
                 class="hevmayg-card-img border-radius10px"
@@ -808,11 +808,11 @@
             <div class="hevmayg-card border-radius10px">
               <img
                 class="hevmayg-card-img border-radius10px"
-                src="https://mgl.gogo.mn/newsn/thumbnail/510/images/c/2023/09/310760-18092023-1695002878-982692408-minii_sanal_bolgoh_nom.jpg "
+                src="https://mgl.gogo.mn/newsn/thumbnail/510/images/c/2020/12/265740-15122020-1608019172-631762625-g11.jpg"
                 alt=""
               />
               <div class="hevmayg-card-text flex">
-                <h4>Миний санал болгох ном</h4>
+                <h4>Улаагчны хар нуур</h4>
                 <div class="hevmayg-card-under flex">
                   <img src="./zurag/medee icon/share (1).png" alt=" " />
                   <div>0</div>
@@ -822,11 +822,11 @@
             <div class="hevmayg-card border-radius10px">
               <img
                 class="hevmayg-card-img border-radius10px"
-                src="https://mgl.gogo.mn/newsn/thumbnail/510/images/c/2023/09/310760-18092023-1695002878-982692408-minii_sanal_bolgoh_nom.jpg "
+                src="https://mgl.gogo.mn/newsn/thumbnail/510/images/c/2020/04/254608-24042020-1587712527-2143033462-spaghetti-and-meatballs-56109647-5845fee25f9b5851e5cc6a41.jpg"
                 alt=""
               />
               <div class="hevmayg-card-text flex">
-                <h4>Миний санал болгох ном</h4>
+                <h4>Хоолны жор: Бөөрөнхий махтай шпагетти</h4>
                 <div class="hevmayg-card-under flex">
                   <img src="./zurag/medee icon/share (1).png" alt=" " />
                   <div>0</div>
@@ -836,11 +836,138 @@
             <div class="hevmayg-card border-radius10px">
               <img
                 class="hevmayg-card-img border-radius10px"
-                src="https://mgl.gogo.mn/newsn/thumbnail/510/images/c/2023/09/310760-18092023-1695002878-982692408-minii_sanal_bolgoh_nom.jpg "
+                src="https://mgl.gogo.mn/newsn/thumbnail/510/images/c/2020/04/253533-03042020-1585902739-579747585-Untitled-1.jpg"
                 alt=""
               />
               <div class="hevmayg-card-text flex">
-                <h4>Миний санал болгох ном</h4>
+                <h4>Хоолны жор: Дархлаа дэмжих цагаан гаа, лимонтой цай</h4>
+                <div class="hevmayg-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="Tec">
+          <div class="tec-text flex">
+            <img
+              src="https://mgl.gogo.mn//newsn/v4/images/tech.a4b28dbb.png"
+              alt=""
+            />
+            Технологи
+          </div>
+          <div class="tec-cards flex">
+            <div class="tec-card border-radius10px">
+              <img
+                class="tec-card-top"
+                src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311225-28092023-1695860639-835940155-_131270503_337bb1da0f862f76f1d0dfbaa1a8078cec2fce200_201_7511_42271000x563.jpg"
+                alt=""
+              />
+              <h4>ChatGPT 2021 оноос хойших мэдээллийн сантай боллоо</h4>
+              <div class="tec-card-under flex">
+                <img src="./zurag/medee icon/share (1).png" alt=" " />
+                <div>0</div>
+                <img
+                  src="https://mgl.gogo.mn//newsn/v4/images/comment-light.bd31b019.svg"
+                  alt=""
+                />
+                <div>0</div>
+              </div>
+            </div>
+            <div class="tec-card border-radius10px">
+              <img
+                class="tec-card-top"
+                src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-27092023-1695775751-1586664104-2c85da8d-6668-48db-b37c-801ac8eb2e64.jpg"
+                alt=""
+              />
+              <h4>
+                59 ам.долларын үнэтэй илгэн гэр “Apple”-ийн 2023 оны хамгийн том
+                бүтэлгүйтэл болов
+              </h4>
+              <div class="tec-card-under flex">
+                <img src="./zurag/medee icon/share (1).png" alt=" " />
+                <div>0</div>
+                <img
+                  src="https://mgl.gogo.mn//newsn/v4/images/comment-light.bd31b019.svg"
+                  alt=""
+                />
+                <div>0</div>
+              </div>
+            </div>
+            <div class="tec-card border-radius10px">
+              <img
+                class="tec-card-top"
+                src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/311151-26092023-1695713538-1427930486-defender2.jpg"
+                alt=""
+              />
+              <h4>
+                “Top Gear” сэтгүүлийн ерөнхий редакторын Монголд хийсэн АЯН
+                ЗАМЫН ТЭМДЭГЛЭЛ
+              </h4>
+              <div class="tec-card-under flex">
+                <img src="./zurag/medee icon/share (1).png" alt=" " />
+                <div>0</div>
+                <img
+                  src="https://mgl.gogo.mn//newsn/v4/images/comment-light.bd31b019.svg"
+                  alt=""
+                />
+                <div>0</div>
+              </div>
+            </div>
+            <div class="tec-card border-radius10px">
+              <img
+                class="tec-card-top"
+                src="https://mgl.gogo.mn/newsn/thumbnail/420/images/c/2023/09/-26092023-1695714295-619787406-fe17d942-67c2-4295-86b8-10af7b954eab.jpg"
+                alt=""
+              />
+              <h4>
+                “Getty Images” хиймэл оюун ашиглан зураг үүсгэдэг шинэ
+                бүтээгдэхүүнээ танилцуулна
+              </h4>
+              <div class="tec-card-under flex">
+                <img src="./zurag/medee icon/share (1).png" alt=" " />
+                <div>0</div>
+                <img
+                  src="https://mgl.gogo.mn//newsn/v4/images/comment-light.bd31b019.svg"
+                  alt=""
+                />
+                <div>0</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="comic">
+          <div class="comic-text flex">
+            <img
+              src="https://mgl.gogo.mn//newsn/v4/images/comic.9afb6d5b.png"
+              alt=""
+            />
+            Комик
+          </div>
+          <div class="comic-card flex">
+            <div class="comic-card border-radius10px">
+              <img
+                class="comic-card-img border-radius10px"
+                src="https://mgl.gogo.mn/newsn/thumbnail/1000/comic/2023/06/21/3773/comic-153411-688093610.jpeg"
+                alt=""
+              />
+              <div class="comic-card-text flex">
+                <h4>Хоолны жор: Дархлаа дэмжих цагаан гаа, лимонтой цай</h4>
+                <div class="hevmayg-card-under flex">
+                  <img src="./zurag/medee icon/share (1).png" alt=" " />
+                  <div>0</div>
+                </div>
+              </div>
+            </div>
+            <div class="comic-card border-radius10px">
+              <img
+                class="comic-card-img border-radius10px"
+                src="https://mgl.gogo.mn/newsn/thumbnail/1000/comic/2023/05/03/3772/hugjliin_bank-184555-1805228234.jpeg"
+                alt=""
+              />
+              <div class="comic-card-text flex">
+                <h4>Хоолны жор: Дархлаа дэмжих цагаан гаа, лимонтой цай</h4>
                 <div class="hevmayg-card-under flex">
                   <img src="./zurag/medee icon/share (1).png" alt=" " />
                   <div>0</div>
